--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -1,180 +1,174 @@
-//formateo
-
 *
-	padding 0px
-	margin 0px
+  padding: 0
+  margin: 0
 
-rojo= #DE433D
-blanco= #EAEAEA
-azul= #4E6C7D
-fondo= #EAEAEA
 a
-	text-decoration none
-	color #000
+  text-decoration: none
+  color: #000
+
 body
-	background fondo
-	border-radius .5em	
+  background: #eaeaea
+  border-radius: .5em
 
 header
-	background #DBDBDB
-	padding 10px
-	text-align center
+  background: #dbdbdb
+  padding: 10px
+  text-align: center
+
 img
-	margin-right 100px
+  margin-right: 100px
 
 fieldset
-	border: 4px solid azul
-	border-radius: .5em
-	padding: 1em
-	box-shadow 5px 5px 9px #C0C0C0
-
+  border: 4px solid #4e6c7d
+  border-radius: .5em
+  padding: 1em
+  box-shadow: 5px 5px 9px #c0c0c0
 
 footer
-	padding 30px
-	background #DBDBDB
-p
-	font-family Helvetica
-	color azul
-	font-weight bold
-h2
-	color azul
-	font-size 2em
-	
-label
-	font-size 1.4em
-.agregar-frm
-	text-align center
+  padding: 30px
+  background: #dbdbdb
 
-.agregar, .agregar2
-	//background pink
-	margin 15px
-	width 590px
-	display inline-block
+p
+  font-family: Helvetica
+  color: #4e6c7d
+  font-weight: bold
+
+h2
+  color: #4e6c7d
+  font-size: 2em
+
+label
+  font-size: 1.4em
+
+.agregar-frm
+  text-align: center
+
+.agregar,
+.agregar2
+  margin: 15px
+  width: 590px
+  display: inline-block
 
 .boton
-	margin 30px
+  margin: 30px
+
 #boton-cerrar
-	margin-left 790px
-	padding 30px
-	background rojo
-	padding 10px 20px
-
-
-/*.cajas
-	border-radius .7em
-	text-align center
-	margin 10px
-	font-size 1.30em
-	font-weight bold
-	display inline-block
-	padding 120px 80px
-	border-style solid
-	background #DBDBDB
-	cursor pointer*/
+  margin-left: 790px
+  padding: 30px
+  background: #de433d
+  padding: 10px 20px
 
 .cambio
-{
-	font-size 1em
-	font-weight bold
-	color rojo
-	-ms-transition: all 2.5s ease-out;
-	-moz-transition: all 2.5s ease-out;
-	-o-transition: all 2.5s ease-out;
-	-webkit-transition: all 2.5s ease-out;
-	transition: all 2.5s ease-out;
-}
+  font-size: 1em
+  font-weight: bold
+  color: #de433d
+  -ms-transition: all 2.5s ease-out
+  -moz-transition: all 2.5s ease-out
+  -o-transition: all 2.5s ease-out
+  -webkit-transition: all 2.5s ease-out
+  transition: all 2.5s ease-out
 
 .especial
-	font-size 1.8em
-	padding-top 275px
+  font-size: 1.8em
+  padding-top: 275px
 
 .recuadro
-	position relative
-	width 230px
-	height 290px
-	overflow hidden
-	border-radius .7em
-	border 5px solid azul
-	text-align center
-	margin 5px 50px
-	font-size 1.30em
-	font-weight bold
-	display inline-block
-  
-.imagen_recuadro, .detalles_recuadro 
-	text-align center
-	height 290px
-  
-.imagen_recuadro
-	margin-top 0
-	background blanco
-	-webkit-transition-property margin-top
-	-webkit-transition-duration .9s
-	-moz-transition-property margin-top
-	-moz-transition-duration .9s
-	-o-transition-property margin-top
-	-o-transition-duration .9s
-	-ms-transition-property margin-top
-	-ms-transition-duration .9s
+  position: relative
+  width: 230px
+  height: 290px
+  overflow: hidden
+  border-radius: .7em
+  border: 5px solid #4e6c7d
+  text-align: center
+  margin: 5px 50px
+  font-size: 1.3em
+  font-weight: bold
+  display: inline-block
 
-.detalles_recuadro 
-	font-family Arial
-	font-size 12px
+.imagen_recuadro,
+.detalles_recuadro
+  text-align: center
+  height: 290px
+
+.imagen_recuadro
+  margin-top: 0
+  background: #eaeaea
+  -webkit-transition-property: margin-top
+  -webkit-transition-duration: .9s
+  -moz-transition-property: margin-top
+  -moz-transition-duration: .9s
+  -o-transition-property: margin-top
+  -o-transition-duration: .9s
+  -ms-transition-property: margin-top
+  -ms-transition-duration: .9s
+
+.detalles_recuadro
+  font-family: Arial
+  font-size: 12px
 
 .recuadro:hover .imagen_recuadro
-	margin-top -470px
-//terminan estilos de prueba
-	
-.principal-agrega
-	background white
-.principal-opcion
-	margin auto
-	padding 63px
-	width 80%
-	text-align center
+  margin-top: -470px
 
+.principal-agrega
+  background: #fff
+
+.principal-opcion
+  margin: auto
+  padding: 63px
+  width: 80%
+  text-align: center
 
 .principal
-	margin 10px 300px
-	padding 98px 
-	text-align center
-	font-weight bold
+  margin: 10px 300px
+  padding: 98px
+  text-align: center
+  font-weight: bold
 
 .usuario
-	padding 15px
+  padding: 15px
 
-input[type="text"], input[type="password"], input[type="date"], input[type="number"]
-	background #FFF
-	border-radius .7em
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="number"]
+  background: #fff
+  border-radius: .7em
 
-input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="number"]:focus
-	background #A2CDFD
+input[type="text"]:focus,
+input[type="password"]:focus,
+input[type="date"]:focus,
+input[type="number"]:focus
+  background: #a2cdfd
 
-input[type="submit"], input[type="button"]
-	padding 10px 50px
-	box-shadow 5px 5px 9px gray
-	background azul
-	color #fff
-	font-weight bold
-	font-size 1em
-	text-align center
-	cursor pointer
-	border-radius .5em
-	-ms-transition all 0.5s ease-in
-	-moz-transition all 0.5s ease-in
-	-o-transition all 0.5s ease-in
-	-webkit-transition all 0.5s ease-in
-	transition all 0.5s ease-in
+input[type="submit"],
+input[type="button"]
+  padding: 10px 50px
+  box-shadow: 5px 5px 9px #808080
+  background: #4e6c7d
+  color: #fff
+  font-weight: bold
+  font-size: 1em
+  text-align: center
+  cursor: pointer
+  border-radius: .5em
+  -ms-transition: all .5s ease-in
+  -moz-transition: all .5s ease-in
+  -o-transition: all .5s ease-in
+  -webkit-transition: all .5s ease-in
+  transition: all .5s ease-in
 
 input[type="button"]
-	background azul
-	padding 10px 50px
+  background: #4e6c7d
+  padding: 10px 50px
 
-input[type="submit"]:hover, input[type="button"]:hover
-	background rojo
- 	-ms-transition all 0.5s ease-out
-	-moz-transition all 0.5s ease-out
-	-o-transition all 0.5s ease-out
-	-webkit-transition all 0.5s ease-out
-	transition all 0.5s ease-out
-	opacity 0.7
+input[type="submit"]:hover,
+input[type="button"]:hover
+  background: #de433d
+
+-ms-transition all 0.5s ease-out
+  -moz-transition: all .5s ease-out
+  -o-transition: all .5s ease-out
+  -webkit-transition: all .5s ease-out
+  transition: all .5s ease-out
+  opacity: .7
+
