--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,10 +119,12 @@ label {
   text-align: center;
 }
 .principal {
-  margin: 10px 300px;
-  padding: 98px;
+  /*margin: 10px 300px;
+  padding: 98px;*/
+  margin: 65px auto;
+  width: 90%;
   text-align: center;
-  font-weight: bold;
+  font-weight: bold; 
 }
 .usuario {
   padding: 15px;
@@ -171,4 +173,8 @@ input[type="button"]:hover {
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
   opacity: 0.7;
+}
+
+td #actions form{
+  display: inline !important;
 }
