--- a/css/estilos.css
+++ b/css/estilos.css
@@ -80,7 +80,7 @@ label {
   border-radius: 0.7em;
   border: 5px solid #4e6c7d;
   text-align: center;
-  margin: 5px 50px;
+  margin: 5px 10px;
   font-size: 1.3em;
   font-weight: bold;
   display: inline-block;
@@ -111,16 +111,21 @@ label {
 }
 .principal-agrega {
   background: #fff;
+  padding: 70px;
 }
 .principal-opcion {
   margin: auto;
-  padding: 63px;
+  padding: 90px;
   width: 80%;
   text-align: center;
 }
+.login{
+margin: 0px 390px;
+padding: 70px 0px;
+
+}
 .principal {
-  /*margin: 10px 300px;
-  padding: 98px;*/
+  padding: 50px;
   margin: 65px auto;
   width: 90%;
   text-align: center;
