--- a/css/estilos.css
+++ b/css/estilos.css
@@ -134,15 +134,22 @@ padding: 70px 0px;
 .usuario {
   padding: 15px;
 }
+select{
+
+  min-width: 150px;
+}
+
 input[type="text"],
 input[type="password"],
 input[type="date"],
+select,
 input[type="number"] {
   background: #fff;
   border-radius: 0.7em;
 }
 input[type="text"]:focus,
 input[type="password"]:focus,
+select:focus,
 input[type="date"]:focus,
 input[type="number"]:focus {
   background: #a2cdfd;
